merge -r 765339:765340 from 1.3.x branch
git-svn-id: https://svn.apache.org/repos/asf/continuum/trunk@765385 13f79535-47bb-0310-9956-ffa450edef68